fixed gallery alignment

--- a/style.css
+++ b/style.css
@@ -64,7 +64,8 @@ a {
 
 img.gallery {
   width: auto;
-  height: 200px;;
+  height: 200px;
+  margin: 16px;
 }
 
 #title-card {
@@ -89,7 +90,6 @@ img.gallery {
   display: flex;
   /* grid-template-columns: 1fr 1fr 1fr 1fr; */
   justify-content: space-around;
-  justify-items: center;
 }
 
   /* check */
@@ -110,18 +110,16 @@ img.gallery {
 }
 
 .circle {
-  width: 80px;
-  height: 80px;
+  width: 120px;
+  height: 120px;
   border-radius: 50%;
-  background-color: lightslategrey;
   vertical-align: bottom;
-  box-shadow: 0 0 2px ;
-  position:relative;
+  box-shadow: 0 0 2px;
   display: inline-block;
-  list-style: none;
-  text-align: center;
   margin: auto;
-  padding: 0;
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .container {
